update to concrete programme

--- a/itgm6/index.html
+++ b/itgm6/index.html
@@ -25,6 +25,16 @@
       background-color: #ff8300;
     }
 
+    a {
+      color: #ff8300;
+      border-bottom: 1px dotted #ff8300;
+    }
+
+    a:hover {
+      color: #974508;
+      border-bottom: 1px dotted #974508;
+    }
+
     .hidden.menu {
       display: none;
     }
@@ -203,6 +213,7 @@
 
     #programme .start {
       color: #974508;
+      margin-bottom: 2px;
     }
 
     #programme .circular.image {
@@ -217,6 +228,13 @@
 
     #programme .ui.items {
       margin-top: 30px;
+    }
+
+    #programme .empty.content .header {
+      font-weight: 300;
+      font-size: 24px;
+      color: #974508;
+      margin-right: 20px;
     }
 
     @media only screen and (max-width: 700px) {
@@ -1062,19 +1080,30 @@
         </div>
         <div class="right floated thirteen wide column">
           <h3 class="ui header">Персональные данные в облаке с технической и правовой стороны вопроса. / Microsoft Azure. От теории к практике</h3>
-          <div class="ui comments">
-            <div class="comment">
-              <a class="avatar">
+          <div class="ui items">
+            <div class="item">
+              <div class="ui circular image">
                 <img src="assets/images/avatar/nan.jpg">
-              </a>
+              </div>
               <div class="content">
-                <a class="author">Никита Ефимов</a>
-                <div class="text">
+                <div class="author">Никита Ефимов</div>
+                <div class="meta">
                   Руководитель отдела проектирования, Selectel
                 </div>
               </div>
             </div>
-          </div>        
+            <div class="item">
+              <div class="ui circular image">
+                <img src="assets/images/avatar/nan.jpg">
+              </div>
+              <div class="content">
+                <div class="author">Никита Ефимов</div>
+                <div class="meta">
+                  Руководитель отдела проектирования, Selectel
+                </div>
+              </div>
+            </div>            
+          </div>          
         </div> 
       </div>   
       <div class="row">
@@ -1082,21 +1111,16 @@
           <h1 class="start">15:00</h1> 
           <p>15:40</p>            
         </div>
-        <div class="right floated thirteen wide column">
-          <h3 class="ui header">Персональные данные в облаке с технической и правовой стороны вопроса. / Microsoft Azure. От теории к практике</h3>
-          <div class="ui comments">
-            <div class="comment">
-              <a class="avatar">
-                <img src="assets/images/avatar/nan.jpg">
-              </a>
-              <div class="content">
-                <a class="author">Никита Ефимов</a>
-                <div class="text">
-                  Руководитель отдела проектирования, Selectel
-                </div>
+        <div class="right floated middle aligned thirteen wide column">
+          <div class="ui items">
+            <div class="item">
+              <div class="empty content">
+                <h3 class="header">Тема не определена</h3>
+                <a class="" href="#">Хочу выступить!</a>
               </div>
+              
             </div>
-          </div>        
+          </div>         
         </div> 
       </div>  
       <div class="row">
@@ -1106,19 +1130,19 @@
         </div>
         <div class="right floated thirteen wide column">
           <h3 class="ui header">Персональные данные в облаке с технической и правовой стороны вопроса. / Microsoft Azure. От теории к практике</h3>
-          <div class="ui comments">
-            <div class="comment">
-              <a class="avatar">
+          <div class="ui items">
+            <div class="item">
+              <div class="ui circular image">
                 <img src="assets/images/avatar/nan.jpg">
-              </a>
+              </div>
               <div class="content">
-                <a class="author">Никита Ефимов</a>
-                <div class="text">
+                <div class="author">Никита Ефимов</div>
+                <div class="meta">
                   Руководитель отдела проектирования, Selectel
                 </div>
               </div>
             </div>
-          </div>        
+          </div>         
         </div> 
       </div>                
   </div>
