--- a/itgm6/index.html
+++ b/itgm6/index.html
@@ -25,12 +25,12 @@
       background-color: #ff8300;
     }
 
-    a {
+    a.link {
       color: #ff8300;
       border-bottom: 1px dotted #ff8300;
     }
 
-    a:hover {
+    a.link:hover {
       color: #974508;
       border-bottom: 1px dotted #974508;
     }
@@ -168,6 +168,13 @@
 
     #partners .card {
       box-shadow: none;
+    }
+
+    #partners .helper {
+      content: "";
+      display: inline-block;
+      height: 100%;
+      vertical-align: middle;      
     }
 
     #infopartners .card {
@@ -847,7 +854,7 @@
       <div class="ui six doubling cards center aligned container">
         <div class="ui card">
           <div class="ui middle aligned content">
-            <a class="ui image" href="http://piter-united.ru/main.html" target="_blank">
+            <a class="ui small image" href="http://piter-united.ru/main.html" target="_blank">
               <img src="assets/images/logos/pu.png">
             </a>
           </div>
@@ -857,7 +864,7 @@
         </div>           
         <div class="ui card">
           <div class="ui middle aligned content">
-            <a class="ui image" href="http://www.spbcioclub.ru/" target="_blank">
+            <a class="ui small image" href="http://www.spbcioclub.ru/" target="_blank">
               <img src="assets/images/logos/spbcio.gif">
             </a>
           </div>
@@ -867,7 +874,7 @@
         </div>          
         <div class="ui card">
           <div class="ui middle aligned content">
-            <a class="ui image" href="http://www.dins.ru/" target="_blank">
+            <a class="ui small image" href="http://www.dins.ru/" target="_blank">
               <img src="assets/images/logos/dins.png">
             </a>
           </div>
@@ -877,7 +884,7 @@
         </div>   
         <div class="ui card">
           <div class="ui middle aligned content">
-            <a class="ui image" href="http://www.billing.ru/" target="_blank">
+            <a class="ui small image" href="http://www.billing.ru/" target="_blank">
               <img src="assets/images/logos/peterservice.png">
             </a>
           </div>
@@ -887,7 +894,7 @@
         </div>  
         <div class="ui card">
           <div class="ui middle aligned content">
-            <a class="ui image" href="http://www.epam-group.ru/" target="_blank">
+            <a class="ui small image" href="http://www.epam-group.ru/" target="_blank">
               <img src="assets/images/logos/epam.png">
             </a>
           </div>
@@ -897,7 +904,8 @@
         </div>   
         <div class="ui card">      
           <div class="ui content">
-            <a class="ui middle aligned image" href="https://www.luxoft.ru/" target="_blank">
+            <a class="ui small image" href="https://www.luxoft.ru/" target="_blank">
+              <span class="helper"></span>
               <img class="ui middle aligned image" src="assets/images/logos/luxoft.png">
             </a>
           </div>
@@ -924,56 +932,56 @@
       <div class="ui six doubling cards center aligned container">
         <div class="ui card">
           <div class="ui middle aligned content">
-            <a class="ui image" href="http://piter-united.ru/main.html" target="_blank">
+            <a class="ui small image" href="http://piter-united.ru/main.html" target="_blank">
               <img src="assets/images/logos/da.png">
             </a>
           </div>                   
         </div>           
         <div class="ui card">
           <div class="ui middle aligned content">
-            <a class="ui image" href="http://www.spbcioclub.ru/" target="_blank">
+            <a class="ui small image" href="http://www.spbcioclub.ru/" target="_blank">
               <img src="assets/images/logos/spbcio.gif">
             </a>
           </div>                  
         </div>          
         <div class="ui card">
           <div class="ui middle aligned content">
-            <a class="ui image" href="http://www.dins.ru/" target="_blank">
+            <a class="ui small image" href="http://www.dins.ru/" target="_blank">
               <img src="assets/images/logos/ittalk.png">
             </a>
           </div>                   
         </div>   
         <div class="ui card">
           <div class="ui middle aligned content">
-            <a class="ui image" href="http://www.billing.ru/" target="_blank">
+            <a class="ui small image" href="http://www.billing.ru/" target="_blank">
               <img src="assets/images/logos/loftblog.png">
             </a>
           </div>                     
         </div>  
         <div class="ui card">
           <div class="ui middle aligned content">
-            <a class="ui image" href="http://www.epam-group.ru/" target="_blank">
+            <a class="ui small image" href="http://www.epam-group.ru/" target="_blank">
               <img src="assets/images/logos/profsoux.png">
             </a>
           </div>                     
         </div>   
         <div class="ui card">      
           <div class="ui content">
-            <a class="ui middle aligned image" href="https://www.luxoft.ru/" target="_blank">
+            <a class="ui small middle aligned image" href="https://www.luxoft.ru/" target="_blank">
               <img class="ui middle aligned image" src="assets/images/logos/secr15.png">
             </a>
           </div>                           
         </div>   
         <div class="ui card">      
           <div class="ui content">
-            <a class="ui middle aligned image" href="https://www.luxoft.ru/" target="_blank">
+            <a class="ui small middle aligned image" href="https://www.luxoft.ru/" target="_blank">
               <img class="ui middle aligned image" src="assets/images/logos/itsob.png">
             </a>
           </div>                           
         </div>      
         <div class="ui card">      
           <div class="ui content">
-            <a class="ui middle aligned image" href="https://www.luxoft.ru/" target="_blank">
+            <a class="ui small middle aligned image" href="https://www.luxoft.ru/" target="_blank">
               <img class="ui middle aligned image" src="assets/images/logos/spbitru.png">
             </a>
           </div>                           
@@ -1116,7 +1124,7 @@
             <div class="item">
               <div class="empty content">
                 <h3 class="header">Тема не определена</h3>
-                <a class="" href="#">Хочу выступить!</a>
+                <a class="link" href="#">Хочу выступить!</a>
               </div>
               
             </div>
