--- a/itgm6/index.html
+++ b/itgm6/index.html
@@ -202,6 +202,10 @@
       margin-bottom: 30px;
     }  
 
+    #infopartners {
+      padding-top: 50px;
+    }
+
     #money {
       background-color: #fafafa;
     }
@@ -222,11 +226,19 @@
     #map .ui.card .content {
       border-top: none;
     }
+
+    #map .ui.card .content .description {
+      margin-top: 10px;
+    }
     
     #map, #map .ui.segment {
       margin: 0;
       padding: 0;
       border: none;
+    }
+
+    #map .icon {
+      color: #ff8300;
     }
 
     #canvas-map {
@@ -1058,20 +1070,20 @@
           <div class="header">
           Когда
           </div>
-          <p><i class=""></i> 28 ноября 2015 (сб), с 12:00 до 19:00</p>          
+          <div class="description"><i class="tiny calendar icon"></i> 28 ноября 2015 (сб), 11:00-18:00</div>      
         </div>
         <div class="content">
           <div class="header">
           Место проведения
           </div>
-          <p><i class=""></i> Санкт-Петербург, пр. Медиков д.3, КДЦ “Club House”</p>
+          <div class="description"><i class="tiny marker icon"></i> Санкт-Петербург, пр. Медиков д.3, КДЦ “Club House”</div>
         </div>
         <div class="content">
           <div class="header">
           Контакты
           </div>
-          <p><i class=""></i> piterunited@gmail.com</p> 
-          <p><i class=""></i> +7 911 123-44-55</p>  
+          <div class="description"><i class="tiny mail outline icon"></i> piterunited@gmail.com</div> 
+          <div class="description"><i class="tiny phone icon"></i> +7 911 123-44-55</div>
           
         </div> 
         <div class="ui bottom attached extra content">
