--- a/itgm6/index.html
+++ b/itgm6/index.html
@@ -42,9 +42,6 @@
     .hidden.menu {
       display: none;
     }
-    #share .sticky {
-      top: 150px;
-    }
 
     #firstslide {
       min-height: 700px;
@@ -71,7 +68,11 @@
 
     #firstslide.card .top.content {
       padding: 10px 50px;
-    }    
+    }  
+
+    #firstslide.card .top.content i {
+      color: #ffffff;
+    } 
 
     #firstslide.card .info.content h2 {
       font-size: 44px;
@@ -365,47 +366,6 @@
       }
     }
   </style>
-
-  <script src="./assets/library/jquery.min.js"></script>
-  <script>
-  $(document)
-    .ready(function() {
-      // fix menu when passed
-      $('#firstslide')
-        .visibility({
-          once: false,
-          onBottomPassed: function() {
-            $('#topmenu').transition('fade in');
-          },
-          onBottomPassedReverse: function() {
-            $('#topmenu').transition('fade out');
-          }
-        })
-      ;    
-
-      $('.communities.column').click(function() {
-        $('#programme')
-        .modal('show')
-        ;
-        return false;
-      });
-
-      $('.ui.embed').embed(); 
-
-      $('.photos .image')
-        .dimmer({
-          on: 'hover'        
-        });  
-
-      $('.photos .image').click(function() {      
-        var src = $(this).find('img').attr('src');
-        $('#photo').find('img').attr('src', src);
-        $('#photo').modal('setting', 'transition', 'scale').modal('show');
-        return false;
-      });              
-    })
-  ;
-  </script>
 </head>
 <body>
 
@@ -434,16 +394,17 @@
 
   <!-- First Slide -->
   <div id="firstslide" class="ui inverted vertical stripe card segment">
-    <a class="anchor" id="home_a"></a> 
+    <a class="anchor" id="home_a"></a>
 
     <div class="top content">
       <div class="right floated meta">
-        <a class="link"><i class="small twitter icon"></i></a>
-        <a class="link"><i class="facebook icon"></i></a>
-        <a class="link"><i class="mail icon"></i></a>        
+        <a ><i class="twitter icon"></i></a>
+        <a ><i class="facebook icon"></i></a>
+        <a ><i class="google plus icon"></i></a>        
+        <a ><i class="vk icon"></i></a>
       </div>
       <img class="ui mini image" src="assets/images/logos/logo_white_full.png"> IT Global Meetup
-    </div>   
+    </div> 
 
     <div class="ui center aligned info content">
       <h2 class="ui inverted header">
@@ -468,7 +429,7 @@
 
 
     <div class="ui center aligned countdown bottom attached extra content"> 
-      <span class="description">до слета осталось: </span>
+      <span class="">до слета осталось: </span>
       <span class="stat value">{dnn}</span> <span class="stat-info">дней</span> 
       <span class="stat value">{hnn}</span> <span class="stat-info">часов</span> 
       <span class="stat value">{mnn}</span> <span class="stat-info">минут</span> 
@@ -1328,10 +1289,13 @@
   </div>
 </div>
 
+<script src="./assets/library/jquery.min.js"></script>
 <script src="./dist/semantic.min.js"></script>
 
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
 <script src="./assets/js/site.js"></script>
+<script src="./assets/js/vendor/foundation.min.js"></script>
+<script src="./assets/js/vendor/foundation.magellan.js"></script>
 <script type="text/javascript" src="./assets/js/jquery.plugin.js"></script>
 <script type="text/javascript" src="./assets/js/jquery.countdown.js"></script>
 <script type="text/javascript">
@@ -1343,6 +1307,47 @@
     layout      : $('.countdown').html()
   });
 </script>
+
+  <script>
+  $(document)
+    .ready(function() {
+      // fix menu when passed
+      $('#firstslide')
+        .visibility({
+          once: false,
+          onBottomPassed: function() {
+            $('#topmenu').transition('fade in');
+          },
+          onBottomPassedReverse: function() {
+            $('#topmenu').transition('fade out');
+          }
+        })
+      ;    
+
+      $('.communities.column').click(function() {
+        $('#programme')
+        .modal('show')
+        ;
+        return false;
+      });
+
+      $('.ui.embed').embed(); 
+
+      $('.photos .image')
+        .dimmer({
+          on: 'hover'        
+        });  
+
+      $('.photos .image').click(function() {      
+        var src = $(this).find('img').attr('src');
+        $('#photo').find('img').attr('src', src);
+        $('#photo').modal('setting', 'transition', 'scale').modal('show');
+        return false;
+      });              
+    })
+  ;
+  </script>
+
 </body>
 
 </html>
